[workspace]
members = [
    # components
    "components/internal_macros", 
    "components/bpmn_schema", 
    "components/bpmn_engine",
    "components/olive_proto",
    "components/olive_server",
    "components/storage",

    # internal member
    "examples",
]

[workspace.dependencies]
internal_macros = { path = "components/internal_macros" }
bpmn_schema = { path = "components/bpmn_schema" }
bpmn_engine = { path = "components/bpmn_engine" }
olive_proto = { path = "components/olive_proto" }
olive_server = { path = "components/olive_server" }
storage = { path = "components/storage" }