[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
olive-bpmn-schema = { path = "../olive-bpmn-schema" }
olive-bpmn-engine = { path = "../olive-bpmn-engine" }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
serde_json = "1.0"

[[example]]
name = "example"
path = "example.rs"

[[example]]
name = "schema"
path = "schema.rs"

[[example]]
name = "engine"
path = "engine.rs"