[package]
name = "olive-bpmn-engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/olive.org/olive"
readme = "README.md"
description = "Business Process execution Engine for BPMN"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
