[package]
name = "internal_macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/olive.org/olive"
readme = "README.md"
description = "Internal macros for olive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.8"
syn = { version = "1.0.60", features = ["full"] }
