[package]
name = "olive_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpmn_schema = { workspace = true }
olive_proto = { workspace = true }

prost = { version = "0.11" }
tonic = { version = "0.9.2" }
